[metadata]
name = cfn-private-certificate-provider
version = 0.0.0
author = Mark van Holsteijn
url = https://github.com/binxio/cfn-private-certificate-provider
author_email = mark.vanholsteijn@xebia.com
description = manages private CA and certificates 
long_description = file: README.md
long_description_content_type = text/markdown

license = BSD 3-Clause License
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Developers
  License :: OSI Approved :: BSD License
  Operating System :: POSIX
  Operating System :: MacOS
  Operating System :: Unix
  Programming Language :: Python :: 3

[options]
package_dir=
  =src
packages=find:

zip_safe = True
include_package_data = True
install_requires =
  boto3
  requests
  cfn_resource_provider
  certauth

use_scm_version = True


[options.packages.find]
where=
  src
